--- a/src/pages/add-place/add-place.html
+++ b/src/pages/add-place/add-place.html
@@ -1,18 +1,72 @@
-<!--
-  Generated template for the AddPlacePage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
-    <ion-title>add-place</ion-title>
+    <ion-title>Add a place</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-
+  <form #f="ngForm" (ngSubmit)="save(f)">
+    <ion-list>
+      <ion-item>
+        <ion-label fixed>
+          Title
+        </ion-label>
+        <ion-input type="text" placeholder="Beautiful church.." name="title" ngModel required>
+        </ion-input>
+      </ion-item>
+      <ion-item>
+          <ion-label floating>
+            Short Description
+          </ion-label>
+          <ion-textarea name="description" ngModel required>
+          </ion-textarea>
+      </ion-item>
+    </ion-list>
+    <ion-grid>
+      <ion-row>
+        <ion-col col-6>
+          <button ion-button block outline type="button" icon-left (click)="locate()">
+            <ion-icon name="locate"></ion-icon> Locate
+          </button>
+        </ion-col>
+        <ion-col col-6>
+            <button ion-button block outline type="button" icon-left (click)="openMap()">
+              <ion-icon name="map"></ion-icon> Go to Map
+            </button>
+          </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
+          <p>Selected Place...</p>
+        </ion-col>
+      </ion-row>
+      <!-- <ion-row>
+          <ion-col>
+            <button ion-button icon-only type="button" (click)="takePhoto()">
+              <ion-icon name="camera"></ion-icon>  
+            </button>
+          </ion-col>
+        </ion-row> -->
+      <ion-row>
+        <ion-col>
+          <img src="" alt="">
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
+          <button [disabled]="f.invalid" ion-button color="secondary" block type="submit">
+            Add this place
+          </button>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+    <ion-fab right bottom>
+        <button ion-fab icon-only (click)="takePhoto()">
+            <ion-icon name="camera"></ion-icon>
+        </button>
+    </ion-fab>
+  </form>
 </ion-content>
