--- a/src/pages/set-location/set-location.html
+++ b/src/pages/set-location/set-location.html
@@ -7,12 +7,21 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>set-location</ion-title>
+    <ion-title>Choose Location</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-
+  <ion-grid>
+    <ion-row>
+      <ion-col>
+        <agm-map [latitude]="location?.lat" [longitude]="location?.lng" 
+        [zoom]="16" (mapClick)="setMarker($event)">
+          <agm-marker *ngIf="marker" [latitude]="marker?.lat" [longitude]="marker  ?.lng"></agm-marker>
+        </agm-map>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
