--- a/src/pages/set-location/set-location.html
+++ b/src/pages/set-location/set-location.html
@@ -17,10 +17,25 @@
   <ion-grid>
     <ion-row>
       <ion-col>
-        <agm-map [latitude]="location?.lat" [longitude]="location?.lng" 
-        [zoom]="16" (mapClick)="setMarker($event)">
+        <agm-map 
+        [latitude]="location?.lat" 
+        [longitude]="location?.lng" 
+        [zoom]="16" 
+        (mapClick)="setMarker($event)">
           <agm-marker *ngIf="marker" [latitude]="marker?.lat" [longitude]="marker  ?.lng"></agm-marker>
         </agm-map>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        <button ion-button block color="secondary" (click)="confirm()" [disabled]="!marker">
+          Confirm
+        </button>
+      </ion-col>
+      <ion-col>
+        <button ion-button block color="danger" (click)="abort()">
+          Abort
+        </button>
       </ion-col>
     </ion-row>
   </ion-grid>
