--- a/src/pages/place/place.html
+++ b/src/pages/place/place.html
@@ -1,18 +1,45 @@
-<!--
-  Generated template for the PlacePage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
-    <ion-title>place</ion-title>
+    <ion-title>{{place?.title}}</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
+
+  <ion-grid>
+    <ion-row>
+      <ion-col text-center>
+        <img [src]="place?.imageUrl" alt="{{place?.title}}">
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col text-center>
+        <p>{{place?.description}}</p>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col text-center>
+        <agm-map 
+        [latitude]="place?.location.lat" 
+        [longitude]="place?.location.lng" 
+        [zoom]="16">
+          <agm-marker [latitude]="place?.location.lat" [longitude]="place?.location.lng"></agm-marker>
+        </agm-map>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col text-center>
+        <button type="button" ion-button block (click)="leave()">
+          Go Back
+        </button>
+        <button type="button" ion-button block color="danger" (click)="delete()">
+          Delete
+        </button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 
 </ion-content>
